...
    <string name="alert_permission_in_settings_negative">NEGATIVE</string>
    <string name="alert_permission_in_settings_positive">GO TO SETTINGS</string>

    <!-- Config Strings -->
    <string name="config">Configuration</string>
    <string name="configs">Configurations</string>
    <string name="config_new">Create New Configuration</string>
    <string name="config_view">VIEW ALL CONFIGURATIONS</string>
    <string name="config_back">BACK</string>
    <string name="config_next">NEXT</string>
    <string name="config_done">DONE</string>
    <string name="config_count">There are currently %s configurations on this device.</string>
    <!-- This is "no" in the context of "there are no configs..." not "no" as in "no you cannot do this." -->
...
    <string name="config_lang_explanation">Select any languages you want to include with this configuration. Users will be able to choose from these languages in their settings.
If the file contains data for Admin as well, the language will be immediately accessible from the language overflow menu in the toolbar.</string>
    <string name="config_lang_list_title">Languages</string>
    <string name="config_lang_error_none">At least one language is required.</string>
    <string name="config_transfer_receiving_files">Receiving Files&#8230;</string>
    <string name="config_transfer_files_title">Uploaded Files</string>
    <string name="config_transfer_button">GET FILE FROM URL</string>
    <string name="config_transfer_explanation">To upload %s, connect your computer and this device to the same network and visit this address in your web browser:</string>
    <string name="config_transfer_default">files</string>
    <string name="config_list_empty">None</string>
    <string name="config_lang_admin">Admin</string>
    <string name="config_lang_user">Users</string>
    <string name="config_server_auth_title">Server Authentication</string>
...
    <string name="config_password_error_blank">Password cannot be blank.</string>

    <string name="config_transfer_success">Transfer successful</string>
    <string name="config_transfer_dialog_title">Download File From URL</string>
    <string name="config_transfer_dialog_hint">URL</string>
    <string name="config_transfer_dialog_cancel">CANCEL</string>
    <string name="config_transfer_dialog_download">DOWNLOAD</string>
    <string name="config_transfer_screen_created">created</string>
    <string name="config_transfer_dialog_error">Could not get file from URL.</string>

    <string name="config_success_title">Success</string>
    <string name="config_success_description">Your configuration is being saved. Once it has been saved, you will be able to share it to other devices on the network.</string>
    <string name="config_success_back">RETURN TO MAIN SCREEN</string>
...
