...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@{languageService.getString(vm.hint)}"
                    app:errorTextAppearance="@style/errorStyle">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/nameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:text="@={vm.name}"
                        android:textSize="18sp"/>
...
