...
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/footer"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> vm.next()}"
                android:text="@{vm.buttonText}"
                android:background="@color/colorAccent"
                android:minWidth="200dp"
...
